# library-acquisitions

./: README.md  pyproject.toml
amazon_orders/2025/20230829/: amazon-order-load.csv  orders_from_20230829_to_20230829_20230908_1120.csv
amazon_orders/2025/20230905/: amazon-order-load.csv  orders_from_20230901_to_20230906_20230906_0900.csv
amazon_orders/2025/20230918/: amazon-order-load.csv  orders_from_20230918_to_20230919_20230919_0314.csv
amazon_orders/2025/20230926/: amazon-order-load.csv  orders_from_20230926_to_20230926_20230926_0456.csv
amazon_orders/2025/20231024/: amazon-order-load.csv  orders_from_20231021_to_20231024_20231024_0157.csv
amazon_orders/2025/20240117/: amazon-order-load.csv  orders_from_20240115_to_20240117_20240117_0416.csv
amazon_orders/2025/20240214/: amazon-order-load.csv  orders_from_20240214_to_20240214_20240214_0252.csv
amazon_orders/2025/20240223/: amazon-order-load.csv  orders_from_20240223_to_20240223_20240223_0335.csv
amazon_orders/2025/20240306/: amazon-order-load.csv  orders_from_20240301_to_20240306_20240306_1112.csv
amazon_orders/2025/20240409/: amazon-order-load.csv  orders_from_20240409_to_20240409_20240409_0256.csv
amazon_orders/2025/20240717/: amazon-order-load-1.csv  amazon-order-load-2.csv  (+2 more)
src/library_acquisitions/: __init__.py  generic_pol_creator.py  po_line_creator.py
tests/: created_pol_numbers.txt  generic_Computer_engineering_for_babie_SH94622_20250826_104341.json  generic_Our_dogs_ourselves_how_we_live_dasdas_20250826_222532.json  po_Just_like_tomorrow_113-7500940-244_20250828_140207.json
(+147 files in other folders)
